fix login UI on mobile

--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -162,7 +162,7 @@
   }
 
   .login-form-floating-box {
-    transform: translate(14%, 28%);
+    transform: translate(14%, 20%);
   }
 }
 
